# uDOS

./: .clang-format  .gitignore  BuildS390.bat  BuildX86.bat  DasdCtl.txt  Hercules.cnf  Makefile.am  README  README.txt  ReadMe.1st  RunX86.bat  autogen.cnf  build-all.sh  build.jl  build_core.bat  build_mvs.bat  build_rtl.bat  cnfgen.bat  configure.ac  configure~  ctl.txt  ipl.txt  ipl_loader.txt  kernel.txt  limine.cfg  log2pdf.bat  run.sh  startterm.bat  stivale.txt  udos.cnf  udos00.cckd
DosKrnl/: Mmio.h
DosKrnl/Iodev/: Nvidia.c
DosKrnl/arch/: Cpu.c  Css.h  Disasm.c  Hdebug.h  Interrupt.c  Interrupt.h  Mmu.c  X3270.h  X3390.h
DosKrnl/x86/: Init.c
IPL/: Start16.S
Jcl/: AsmKernel.jcl  AsmRtl.jcl  AsmUtils.jcl  Clean.jcl  LoadZero.jcl  TransferFiles.jcl
Toolchain/: VaArgs.h  stdint.h
doskrnl/: Crypto.c  Makefile.am  format.c  irq.c  irq.h  kernel.c  memory.c  memory.h  mutex.c  mutex.h  registry.c  registry.h  scheduler.c  scheduler.h  user.c  user.h
doskrnl/arch/: Asm.h  Context.c  Context.h  Cpu.c  Cpu.h  Css.c  CssAsm.S  Entry.S  Handlers.S  Hdebug.c  Init.c  Mmu.h  Psa.h  Space.h  X2703.c  X2703.h  X3270.c  X3390.c
doskrnl/comm/: bsc.c  bsc.h
doskrnl/debug/: assert.h  panic.c  panic.h  printf.c  printf.h  ubsan.c  ubsan.h
doskrnl/fs/: ext4.c  fs.c  fs.h  zdsfs.c  zdsfs.h
doskrnl/loader/: elf.c  elf.h  pe.c  pe.h
doskrnl/mm/: mm.c  mm.h  pmm.c  pmm.h
doskrnl/platform/: esa390.ld  x86-pc.ld
doskrnl/s390/: asm.h  context.c  context.h  cpu.c  cpu.h  css.c  css.h  entry.S  handlers.S  hdebug.c  interrupt.c  kinit.c  mmu.c  mmu.h  psa.h  space.h  x2703.c  x2703.h  x3270.c  x3270.h  x3390.c  x3390.h
doskrnl/x86/: context.c  context.h  entry.S  mmu.h
doskrnl/xtensa/: context.c  context.h  kinit.c  mmu.h
dosrtl/: KrnlAs.S  Makefile.am  alloc.c  alloc.h  dataset.c  dataset.h  debug.c  debug.h  error.c  error.h  interact.c  interact.h  krnl32.c  krnl32.h  list.h  memory.c  memory.h  params.h  rtl.h  terminal.h
ipl/: Makefile.am  ipl  ipl.S  linker.ld
ipl_loader/: boot.S  entry.S  ipl_loader.S  ipl_loader.ld  linker.ld  stivale.c  stivale.ld
jcl/: build.jcl  compile.jcl  dokernel.jcl  dortl.jcl  transfer.jcl
kernel/: Makefile.am  alloc.c  alloc.h  arch  asm.h  assert.h  bsc.c  context.c  context.h  cpu.c  cpu.h  crypto.c  crypto.h  css.c  css.h  cssasm.asm  debug.c  dev.c  dev.h  disasm.c  elf.c  elf.h  entry.S  entry.asm  exec.c  exec.h  ext4.c  format.c  fs.c  fs.h  handlers.asm  hdebug.c  hdebug.h  init.c  interrupt.c  irq.c  irq.h  kernel.c  kmain.c  linker.ld  (+47 more)
kernel/comm/: bsc.c
kernel/debug/: assert.h  printf.c  printf.h
kernel/fs/: ext4.c  fs.c  fs.h  zdsfs.c  zdsfs.h
kernel/ldscript/: esa-390.ld  x86-pc.ld  xtensa-virt.ld
kernel/loader/: elf.c
kernel/mm/: mm.c  pmm.c
kernel/s390/: asm.h  context.c  context.h  cpu.c  cpu.h  css.c  css.h  dasd.c  dasd.h  disasm.c  entry.S  hdebug.c  ibm3270.c  ibm3270.h  ibm3390.c  ibm3390.h  int_handler.S  interrupt.c  interrupt.h  kinit.c  mmu.c  mmu.h  space.h  x2703.c  x2703.h  x3270.c  x3270.h  x3390.c  x3390.h
kernel/x86/: context.c  context.h  entry.S  mmu.h
kernel/xtensa/: context.c  entry.S  kinit.c  mmu.h
libc/: Makefile.am  ctype.h  string.c  string.h
programs/: Copy.c  Makefile.am  NewsRdr.c  bfuck.c  build.bat  build.jcl  cmdexec.c  forth.c  hello.c  jesl.c  linker.ld  loadzero.c  lscss.c  netprg.c  newsgrp.c  test.c  ucli.c  user.c
rtl/: alloc.c  dataset.c  debug.c  error.c  error.h  interact.c  interact.h  krnl32.c  krnl32.h  list.h  memory.c  memory.h  rtl.h
toolchain/: stdarg.h
tools/: bin2rec  bin2rec.c  bin2txt.c  compile.sh  raw2mod  raw2mod.c  stage1.txt
