bin_PROGRAMS = test
test_SOURCES = test.c
test_LDFLAGS = -T$(top_srcdir)/programs/linker.ld

bin_PROGRAMS = lscss
lscss_SOURCES = lscss.c
lscss_LDFLAGS = -T$(top_srcdir)/programs/linker.ld

bin_PROGRAMS = user
user_SOURCES = user.c
user_LDFLAGS = -T$(top_srcdir)/programs/linker.ld

bin_PROGRAMS = jesl
jesl_SOURCES = jesl.c
jesl_LDFLAGS = -T$(top_srcdir)/programs/linker.ld

bin_PROGRAMS = ucli
ucli_SOURCES = ucli.c
ucli_LDFLAGS = -T$(top_srcdir)/programs/linker.ld